--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,9 @@
 /*
 ** Overlay Mixin
 */
+/*
+** Prefixes Mixin
+*/
 .product {
   background-color: #eee;
   padding: 10px;
@@ -8,6 +11,11 @@
   width: 300px;
   height: 150px;
   position: relative;
+  -webkit-box-shadow: 10px 10px 10px 10px #ccc;
+  -moz-box-shadow: 10px 10px 10px 10px #ccc;
+  -o-box-shadow: 10px 10px 10px 10px #ccc;
+  -ms-box-shadow: 10px 10px 10px 10px #ccc;
+  box-shadow: 10px 10px 10px 10px #ccc;
 }
 .product .overlay {
   position: absolute;
