--- a/css/sass/helpers/_mixins.scss
+++ b/css/sass/helpers/_mixins.scss
@@ -1,5 +1,6 @@
 /*
 ** Overlay Mixin
+** Overlay Main Properties
 */
 @mixin overlay {
 	position: absolute;
@@ -7,4 +8,15 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
+}
+
+/*
+** Prefixes Mixin
+** Auto Add Prefixes To Properties
+*/
+@mixin prefixer($property, $value, $prefixes: ()) {
+	@each $prefix in $prefixes  {
+		#{'-' + $prefix + '-' + $property}: $value;
+	}
+	#{$property}: $value;
 }
