--- a/css/sass/pages/_homepage.scss
+++ b/css/sass/pages/_homepage.scss
@@ -5,6 +5,7 @@
 	width: 300px;
 	height: 150px;
 	position: relative;
+	@include prefixer(box-shadow, 10px 10px 10px 10px #ccc, webkit moz o ms);
 	.overlay {
 		@include overlay;
 		background-color: rgba($redColor, .4);
