--- a/css/sass/helpers/_mixins.scss
+++ b/css/sass/helpers/_mixins.scss
@@ -8,3 +8,13 @@
 	width: 100%;
 	height: 100%;
 }
+
+/*
+** Prefixes Mixin
+*/
+@mixin prefixer($property, $value, $prefixes: ()) {
+	@each $prefix in $prefixes  {
+		#{'-' + $prefix + '-' + $property}: $value;
+	}
+	#{$property}: $value;
+}
