--- a/css/sass/helpers/_mixins.scss
+++ b/css/sass/helpers/_mixins.scss
@@ -20,3 +20,25 @@
 	}
 	#{$property}: $value;
 }
+
+/*
+** Animation Mixin
+** Auto Add Prefixes To Animation
+*/
+@mixin keyframe($animation-name) {
+	@-webkit-keyframes #{$animation-name} {
+		@content;
+	}
+	@-moz-keyframes #{$animation-name} {
+		@content;
+	}
+	@-o-keyframes #{$animation-name} {
+		@content;
+	}
+	@-ms-keyframes #{$animation-name} {
+		@content;
+	}
+	@keyframes #{$animation-name} {
+		@content;
+	}
+}
