--- a/css/homepage.css
+++ b/css/homepage.css
@@ -10,6 +10,27 @@
 ** Animation Mixin
 ** Auto Add Prefixes To Animation
 */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 1200px;
+  margin: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.header .logo {
+  width: 30%;
+  float: left;
+}
+.header .navbar {
+  width: 70%;
+  float: left;
+}
 .product {
   background-color: #eee;
   padding: 10px;
