--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -3,6 +3,8 @@
 
 @import 'sass/layout/grid';
 
+@import 'sass/pages/globalpage';
+
 @import 'sass/layout/header';
 @import 'sass/pages/homepage';
 @import 'sass/layout/footer';
