--- a/css/sass/layout/_header.scss
+++ b/css/sass/layout/_header.scss
@@ -1,9 +1,13 @@
 .header {
+	padding: 20px 0;
+	overflow: hidden;
+	border-bottom: 1px solid $greyColor;
 	.logo {
 		width: 30%;
-		float: left;
+		float: $float-left;
 		h1 {
-
+			margin-bottom: 0;
+			margin-top: 10px;
 		}
 		p {
 
@@ -11,9 +15,26 @@
 	}
 	.navbar {
 		width: 70%;
-		float: left;
+		float: $float-left;
+		background-color: $redColor;
+		border-radius: 15px;
 		li {
-
+			width: 20%;
+			float: $float-left;
+			font-size: 18px;
+			text-align: center;
+			a {
+				display: block;
+				padding: 20px 10px;
+				color: #fff;
+				text-decoration: none;
+				&.active {
+					color: #ddd;
+				}
+				&:hover {
+					color: #ddd;
+				}
+			}
 		}
 	}
 }
