--- a/css/homepage.css
+++ b/css/homepage.css
@@ -72,87 +72,38 @@ ul, ol {
   color: #ddd;
 }
 
-.product {
-  background-color: #eee;
-  padding: 10px;
-  border: 1px solid #ccc;
-  width: 300px;
-  height: 150px;
-  position: relative;
-  -webkit-animation: fadeInOut 2s infinite linear;
-  -moz-animation: fadeInOut 2s infinite linear;
-  -o-animation: fadeInOut 2s infinite linear;
-  animation: fadeInOut 2s infinite linear;
-  -webkit-box-shadow: 10px 10px 10px 10px #ccc;
-  -moz-box-shadow: 10px 10px 10px 10px #ccc;
-  -o-box-shadow: 10px 10px 10px 10px #ccc;
-  -ms-box-shadow: 10px 10px 10px 10px #ccc;
-  box-shadow: 10px 10px 10px 10px #ccc;
+/* Start Slider */
+.slider blockquote {
+  font-size: 20px;
+  font-style: italic;
+  font-weight: blod;
+  font-family: Tahoma, Arial;
+  line-height: 1.7;
+  text-align: center;
+  color: #5e5e5e;
+  width: 80%;
+  margin: 30px auto;
 }
-.product .overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(226, 73, 76, 0.4);
-  color: #fff;
+.slider img {
+  max-width: 100%;
+}
+.slider .bullets {
+  text-align: center;
+}
+.slider .bullets li {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #9c9c9c;
+  border-radius: 50%;
+  border: 3px solid #9c9c9c;
+  cursor: pointer;
+}
+.slider .bullets li.active, .slider .bullets li:hover {
+  background-color: #fff;
+  border-color: #333;
 }
 
-@-webkit-keyframes fadeInOut {
-  0% {
-    opacity: 0.5;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
-@-moz-keyframes fadeInOut {
-  0% {
-    opacity: 0.5;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
-@-o-keyframes fadeInOut {
-  0% {
-    opacity: 0.5;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
-@-ms-keyframes fadeInOut {
-  0% {
-    opacity: 0.5;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
-@keyframes fadeInOut {
-  0% {
-    opacity: 0.5;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
+/* End Slider */
 
 /*# sourceMappingURL=homepage.css.map */
