--- a/css/homepage.css
+++ b/css/homepage.css
@@ -136,5 +136,31 @@ ul, ol {
 }
 
 /* End Slider */
+/* Start Services */
+.services .service-box {
+  float: left;
+  width: 33.3333333333%;
+}
+.services .service-box:not(:last-of-type) {
+  padding-right: 20px;
+}
+.services .service-box .service-title {
+  color: #666;
+}
+.services .service-box .service-title i {
+  font-size: 35px;
+  position: relative;
+  top: 4px;
+}
+.services .service-box .service-desc {
+  color: #777;
+  line-height: 1.5;
+}
+.services .service-box .service-link {
+  color: #e2494c;
+  text-decoration: none;
+}
+
+/* End Services */
 
 /*# sourceMappingURL=homepage.css.map */
