--- a/css/sass/pages/_homepage.scss
+++ b/css/sass/pages/_homepage.scss
@@ -40,9 +40,9 @@
 .services {
 	.service-box {
 		float: $float-left;
-		width: (100% / 3);
+		width: (98% / 3);
 		&:not(:last-of-type) {
-			padding-right: 20px;
+			margin-right: 1%;
 		}
 		.service-title {
 			color: #666;
@@ -63,3 +63,33 @@
 	}
 }
 /* End Services */
+
+/* Start Our Players */
+.our-players {
+	.player-box {
+		float: $float-left;
+		width: (96% / 5);
+		&:not(:last-of-type) {
+			margin-right: 1%;
+		}
+		.player-img {
+			max-width: 100%;
+		}
+		.player-title {
+			color: #666;
+			font-weight: normal;
+			span {
+				font-weight: bold;
+			}
+		}
+		.player-desc {
+			color: #777;
+			line-height: 1.5;
+		}
+		.player-link {
+			color: $redColor;
+			text-decoration: none;
+		}
+	}
+}
+/* End Our Players */
