feat: create lorem ipsum section

--- a/css/sass/components/_headings.scss
+++ b/css/sass/components/_headings.scss
@@ -8,6 +8,8 @@
 		border-radius: 15px;
 		width: 400px;
 		padding: 10px 15px;
+		text-transform: uppercase;
+		font-weight: normal;
 		&:before,
 		&:after {
 			content: "";
