--- a/css/homepage.css
+++ b/css/homepage.css
@@ -39,6 +39,8 @@
   border-radius: 15px;
   width: 400px;
   padding: 10px 15px;
+  text-transform: uppercase;
+  font-weight: normal;
 }
 .head-with-border h2:before, .head-with-border h2:after {
   content: "";
@@ -143,10 +145,10 @@ ul, ol {
 /* Start Services */
 .services .service-box {
   float: left;
-  width: 32.6666666667%;
+  width: 32%;
 }
 .services .service-box:not(:last-of-type) {
-  margin-right: 1%;
+  margin-right: 2%;
 }
 .services .service-box .service-title {
   color: #666;
@@ -194,5 +196,20 @@ ul, ol {
 }
 
 /* End Our Players */
+/* Start Lorem Ipsum */
+.lorem-ipsum .lorem-box {
+  float: left;
+  width: 31.3333333333%;
+}
+.lorem-ipsum .lorem-box:not(:last-of-type) {
+  margin-right: 3%;
+}
+.lorem-ipsum .lorem-box .lorem-img {
+  width: 100%;
+  max-width: 100%;
+  height: 200px;
+}
+
+/* End Lorem Ipsum */
 
 /*# sourceMappingURL=homepage.css.map */
