--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -3,6 +3,7 @@
 
 @import 'sass/layout/grid';
 @import 'sass/components/headings';
+@import 'sass/components/buttons';
 
 @import 'sass/pages/globalpage';
 
