--- a/css/sass/helpers/_variables.scss
+++ b/css/sass/helpers/_variables.scss
@@ -1,3 +1,9 @@
+$maxMobile: "(max-width: 767px)";
+$maxSmall: "(min-width: 991px)";
+$minSmall: "(min-width: 768px)";
+$minMedium: "(min-width: 992px)";
+$minLarge: "(min-width: 1200px)";
+
 $redColor: #e2494c;
 $greyColor: #9c9c9c;
 
