--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -14,3 +14,28 @@
 		background-color: $redColor;
 	}
 }
+
+.btn-toggler {
+	background-color: $redColor;
+	padding: 8px;
+	border-radius: 5px;
+	border: none;
+	cursor: pointer;
+	position: absolute;
+	top: 5px;
+	right: 0;
+	display: none;
+	outline: none;
+	@media #{$maxMobile} {
+		display: block;
+	}
+	span {
+		display: block;
+		height: 3px;
+		width: 40px;
+		background-color: #fff;
+		&:not(:last-child) {
+			margin-bottom: 6px;
+		}
+	}
+}
