--- a/css/sass/helpers/_variables.scss
+++ b/css/sass/helpers/_variables.scss
@@ -1,7 +1,8 @@
 $maxMobile: "(max-width: 767px)";
-$maxSmall: "(min-width: 991px)";
 $minSmall: "(min-width: 768px)";
+$maxSmall: "(max-width: 991px)";
 $minMedium: "(min-width: 992px)";
+$maxMedium: "(max-width: 1199px)";
 $minLarge: "(min-width: 1200px)";
 
 $redColor: #e2494c;
