feat: advanced sass tricks part 1
mixin: opacity, ofen used propertie
calc color:  green + red, #f00 + #ff0

--- a/css/sass/helpers/_mixins.scss
+++ b/css/sass/helpers/_mixins.scss
@@ -42,3 +42,26 @@
 		@content;
 	}
 }
+
+/*
+** Opacity Mixin
+** Opacity For All Browsers
+*/
+@mixin opacity($value) {
+	zoom: 1;
+	$opacity-ie: $value * 100;
+	filter: alpha(opacity = $opacity-ie);
+	opacity: $value;
+}
+
+/*
+** Transition Mixin
+** Ready Prefixed Transition: if you often use it
+** all what you put in $args, will be the value of this propertie
+*/
+@mixin transition($args...) {
+	-webkit-transition: $args;
+	-moz-transition: $args;
+	-o-transition: $args;
+	transition: $args;
+}
