--- a/css/homepage.css
+++ b/css/homepage.css
@@ -10,6 +10,15 @@
 ** Animation Mixin
 ** Auto Add Prefixes To Animation
 */
+/*
+** Opacity Mixin
+** Opacity For All Browsers
+*/
+/*
+** Transition Mixin
+** Ready Prefixed Transition: if you often use it
+** all what you put in $args, will be the value of this propertie
+*/
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
